@@ -7,6 +7,9 @@
 (only applicable when forking).
 * Fixed: BUILDR-70 JUnit not passing environment variables from the
 :environment option.
+* Fixed: BUILDR-75 Filter now runs if there's a target directory, even if
+there are no source files to copy over, since everyone else just checks
+resources.target for existence before depending on it.
 
 1.3.0 (2008-04-25)
 * Added: Testing with EasyB (Nicolas Modrzyk).
